@@ -295,6 +295,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA i9900  (EXPERIMENTAL)
        Canon PIXMA iP90   (EXPERIMENTAL)
        Canon PIXMA iP90v  (EXPERIMENTAL)
+       Canon PIXMA iP100  (EXPERIMENTAL)
        Canon PIXMA iP3600 (EXPERIMENTAL)
        Canon PIXMA iP3500 (EXPERIMENTAL)
        Canon PIXMA iP3300 (EXPERIMENTAL)
